--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -58,11 +58,23 @@
       <div class="form-group col-md-12">
         <label for="max_word_length">Maximum Word Length:</label>
         <select id = "max_word_length" name="max_word_length" class="form-control">
-          <option value="7">Choose</option>
+          <option value="7">Choose:</option>
           <option value="7">7</option>
           <option value="8">8</option>
           <option value="9">9</option>
           <option value="10">10</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-12">
+        <label for="language">Language:</label>
+        <select id = "language" name="language" class="form-control" required>
+          <option value="">Choose:</option>
+          <option value="english.txt">English</option>
+          <option value="spanish.txt">Spanish</option>
+          <option value="french.txt">French</option>
+          <option value="italian.txt">Italian</option>
         </select>
       </div>
     </div>
