new styles and languages

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -3,6 +3,7 @@
 {% block styles%}
   {{super()}}
   <link rel="stylesheet" href="/static/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -11,7 +12,7 @@
 
 <div class="container ">
   <h1>XKCD Password Generator</h1>
-  <div class="jumbotron">
+  <div class="jumbotron grad">
 
   <form action="/processform" method="get">
     <div class="row">
@@ -19,20 +20,19 @@
     <div class="form-row">
       <div class="form-group col-md-12">
         <label for="min_length">Minimum Password Length:</label>
-        <select id = "min_length" name="min_length" class="form-control">
-          <option value="10">Choose:</option>
-          <option value="10">10</option>
-          <option value="12">12</option>
-          <option value="14">14</option>
+        <select id = "min_length" name="min_length" class="form-control" required>
+          <option value="15">Choose:</option>
+          <option value="15">15</option>
           <option value="16">16</option>
-          <option value="20">20</option>
+          <option value="17">17</option>
+          <option value="18">18</option>
         </select>
       </div>
     </div>
     <div class="form-row">
       <div class="form-group col-md-12">
         <label for="max_length">Maximum Password Length:</label>
-        <select id = "max_length" name="max_length" class="form-control">
+        <select id = "max_length" name="max_length" class="form-control" required>
           <option value="20">Choose:</option>
           <option value="20">20</option>
           <option value="21">21</option>
@@ -46,7 +46,7 @@
     <div class="form-row">
       <div class="form-group col-md-12">
         <label for="min_word_length">Minimum Word Length:</label>
-        <select id = "min_word_length" name="min_word_length" class="form-control">
+        <select id = "min_word_length" name="min_word_length" class="form-control" required>
           <option value="3">Choose:</option>
           <option value="3">3</option>
           <option value="4">4</option>
@@ -57,7 +57,7 @@
     <div class="form-row">
       <div class="form-group col-md-12">
         <label for="max_word_length">Maximum Word Length:</label>
-        <select id = "max_word_length" name="max_word_length" class="form-control">
+        <select id = "max_word_length" name="max_word_length" class="form-control" required>
           <option value="7">Choose:</option>
           <option value="7">7</option>
           <option value="8">8</option>
