--- a/templates/list.html.j2
+++ b/templates/list.html.j2
@@ -3,6 +3,7 @@
 {% block styles%}
   {{super()}}
   <link rel="stylesheet" href="/static/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -23,7 +24,7 @@
   <div class="container head">
     <div class="jumbotron">
       <div class="container">
-        <h1>{{pswds|length}} custom XKCD like passwords!</h1>
+        <h1>{{pswds|length}} custom "XKCD" like passwords!</h1>
       </div>
       <table class="table table-bordered">
         <thead>
