--- a/templates/list.html.j2
+++ b/templates/list.html.j2
@@ -13,8 +13,10 @@
 <div class="row">
   <div class="col-md-2">
     <div class="container head">
-      <p>This Password Generator application works
-         fairly well up until passwords of minimum length = 50.</p>
+      <p>HACK ALERT: This Password Generator application works
+         fairly well up until passwords of minimum length = 50.
+         Play with the query string !
+       </p>
       <p>Click on the Yellow button to refresh the table with the
          same password dimensions.</p>
       <p>Click on the Blue button to go back to the home page and
