new button font family

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -93,7 +93,7 @@
         <input type="checkbox" name="easy_typing">
       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Password!</button>
+    <button type="submit" class="btn btn-primary btn-block">Password!</button>
   </div>
   <div class="col-md-8">
       <img src="/static/img/password.png" class="img-thumbnail" alt="Responsive image">
