Portguese words added using BeautifulSoup

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -78,6 +78,7 @@
           <option value="french.txt">French</option>
           <option value="italian.txt">Italian</option>
           <option value="spanish.txt">Spanish</option>
+          <option value="portuguese.txt">Portuguese</option>
           <option value="multilingual.txt">Multilingual</option>
           <option value="starwars.txt">Star Wars</option>
         </select>
