--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
+body, html {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
 h1 {
   text-align: center;
   font-family: 'Orbitron', sans-serif;
